--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -550,6 +550,16 @@
   year="1979"
 }
 
+@Article{kll81,
+      author         = "KUNDR\' AT, V., LOKAJ\' I\v CEK Jr., M. and LOKAJ\' I\v CEK, M.",
+      title          = "Are elastic hadron collisions central or peripheral?",
+      journal        = "Czech. J. Phys.",
+      volume         = "B31",
+      pages          = "1334",
+      doi            = "10.1007/BF01595377",
+      year           = "1981",
+}
+
 @Article{cahn82,
 		author="CAHN, R.",
 		title="Coulombic - hadronic interference in an eikonal model",
